# GReNMlin-PyBoolNet

./: .gitignore  README.md  comparison.ipynb  example_oscilator.py  example_oscilator_ode.py  example_oscilator_sbml.py  example_toggle.py  example_xor.py  examples.ipynb  model.py  pyproject.toml
qualSBML/: imunity_control.xml  regulator.xml
src/: bool_sim.py  grn.py  helpers.py  network_builder.py  qual_sbml.py  simulator.py  utils.py
