[tool.poetry]
name = "grenmlin-pyboolnet"
version = "0.1.0"
description = ""
authors = ["Jan Vasiljevic <vasiljevic.jan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scipy = "^1.15.0"
pyboolnet = { git = "https://github.com/hklarner/pyboolnet" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
